fix spacing

--- a/A1/style.css
+++ b/A1/style.css
@@ -13,8 +13,10 @@ header {
    display: flex;
    justify-content: left;
    background-color: #333333;
-   padding-top: 25px;
-   padding-bottom: 25px;
+   height: 71px;
+   box-sizing: border-box;
+   align-items: center;
+   padding: 8px;
 }
 
 header a.active{
@@ -25,19 +27,14 @@ header a.active{
 
 header a{
     color: #00b8d4;
-    margin-left: 32px;
+    padding: 16px;
     text-decoration: none;
     font-size: 19.2px;
-    padding-left: 0;
-    padding-right: 0;
+    
 }
 
 header a:hover{
     color: white;
-}
-
-header a:first-child {
-    margin-left:16px;
 }
 
 a.button, button {
@@ -247,5 +244,7 @@ form label {
     text-align: left;
     justify-content: left;
     margin-bottom: 16px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
